Revised images sizes to suit layout, updated Gallery labout

--- a/index.html
+++ b/index.html
@@ -201,7 +201,12 @@
         </div>
       </div>
 
+    <div class="gallery">
+    
+        <h1>Gallery</h1>
+
       <div class="container container-carousel">
+        
         <div
           id="carouselExampleIndicators"
           class="carousel slide"
@@ -257,6 +262,7 @@
           </a>
         </div>
       </div>
+    </div>
     </section>
     <footer></footer>
   </body>
