--- a/index.html
+++ b/index.html
@@ -336,17 +336,15 @@
 
     <footer class="container-fluid footer-container">
 
-	<div class="row footerrow">
+	<div class="row justify-content-center footerrow">
 	
-		<div class="col-4 offset-md-2 footer-col-map">
+		<div class="col-4 footer-col-map">
 			<button class="btn btn-light btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
             Project Map
             </button>
 		</div>
-		<div class="col-3 footer-col-web">
-            Corporate Websites: 
-		</div>
-        <div class="col-1 footer-col-web">
+		<div class="col-4 footer-col-web">
+            <p>Websites:</p>
             <a href="https://wembleypark.com/" target="_blank">  
                 <img src="assets/images/logo-wp-25px.png" alt="Wembley Park Corporate Website Link">
             </a>  
@@ -354,7 +352,7 @@
             <img src="assets/images/logo-quintain-25px.png" alt="Quintain Corporate Website Link">
             </a>
         </div>
-        <div class="col-8 offset-md-2">
+        <div class="col-8">
             <div class="collapse" id="collapseMap">
                 <div class="card card-body">
                     <div id="map"></div>
