--- a/project1.html
+++ b/project1.html
@@ -125,10 +125,10 @@
 				<div class="col no gutters">
 					<ul id="nav" class="list-inline menucontainer">
 						<li class="col-md-3 list-inline-item menuitem">
-							<a href="index.html">Overview</a>
+							<a href="index.html">Project Overview</a>
 						</li>
 
-						<li class="col-md-3 list-inline-item menuitem">
+						<li class="col-md-3 list-inline-item menuitem active">
 							<a href="project1.html"> Project 1</a>
 							<img
                             src="assets/images/P1_thumb.png"
