Amend logos from background images in cSS to images in HTML, as not displaying when pushed to GitHub

--- a/project1.html
+++ b/project1.html
@@ -114,9 +114,13 @@
 <body>
 	<header>
 		<div class="container-fluid container-logo no-gutters">
-			<div class="row no-gutters banner-logo">
-				<div class="col-12 col-md-6 logo-quintain no-gutters"></div>
-				<div class="col-12 col-md logo-wp no-gutters"></div>
+			<div class="row justify-content-center banner-logo">
+				<div class="col-12 col-md-6 logo-quintain justify-content-center">
+                    <img src="assets/images/logo-quintain.png" alt="Quintain Logo">
+                </div>
+				<div class="col-12 col-md logo-wp no-gutters justify-content-center">
+                    <img src="assets/images/logo-wp.jpg" alt="Wembley Park Logo">
+                </div>
 			</div>
 		</div>
 
