--- a/index.html
+++ b/index.html
@@ -123,9 +123,13 @@
 <body>
 	<header>
 		<div class="container-fluid container-logo no-gutters">
-			<div class="row no-gutters banner-logo">
-				<div class="col-12 col-md-6 logo-quintain no-gutters"></div>
-				<div class="col-12 col-md logo-wp no-gutters"></div>
+			<div class="row justify-content-center banner-logo">
+				<div class="col-12 col-md-6 logo-quintain justify-content-center">
+                    <img src="assets/images/logo-quintain.png" alt="Quintain Logo">
+                </div>
+				<div class="col-12 col-md logo-wp no-gutters justify-content-center">
+                    <img src="assets/images/logo-wp.jpg" alt="Wembley Park Logo">
+                </div>
 			</div>
 		</div>
 
@@ -288,7 +292,7 @@
 
 	<footer class="container-fluid footer-container">
 
-		<div class="row justify-content-center footerrow">
+		<div class="row justify-content-center sdfooterrow">
 
 			<div class="col-4 footer-col-map">
 				<button class="btn btn-light btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
