--- a/project1.html
+++ b/project1.html
@@ -281,33 +281,35 @@
 		</div>
 	</section>
 
-	<footer class="container-fluid footer-container">
-
-		<div class="row justify-content-center footerrow">
-
-			<div class="col-4 footer-col-map">
-				<button class="btn btn-light btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
-                    Project Map
-                </button>
-			</div>
-			<div class="col-4 footer-col-web">
-				<p>Websites:</p>
-				<a href="https://wembleypark.com/" target="_blank">
-					<img src="assets/images/logo-wp-25px.png" alt="Wembley Park Corporate Website Link">
-                </a>
-				<a href="https://www.quintain.co.uk/" target="_blank">
-					<img src="assets/images/logo-quintain-25px.png" alt="Quintain Corporate Website Link">
-                </a>
-			</div>
-			<div class="col-8">
-				<div class="collapse" id="collapseMap">
-					<div class="card card-body">
-						<div id="map"></div>
-					</div>
+	<footer>
+		<div class="container-fluid footer-container">
+	
+			<div class="row justify-content-center footerrow">
+	
+				<div class="col-4 footer-col-map">
+					<button class="btn btn-light btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
+	                    Project Map
+	                </button>
 				</div>
-
+				<div class="col-4 footer-col-web">
+					<p>Websites:</p>
+					<a href="https://wembleypark.com/" target="_blank">
+						<img src="assets/images/logo-wp-25px.png" alt="Wembley Park Corporate Website Link">
+	                </a>
+						<a href="https://www.quintain.co.uk/" target="_blank">
+							<img src="assets/images/logo-quintain-25px.png" alt="Quintain Corporate Website Link">
+	                </a>
+				</div>
+				<div class="col-8">
+					<div class="collapse" id="collapseMap">
+						<div class="card card-body">
+							<div id="map"></div>
+						</div>
+					</div>
+	
+				</div>
 			</div>
-
+		</div>
 	</footer>
 </body>
 
