--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </p>
 
 						<div class="center-timeline">
-							<button type="button" class="btn btn-secondary" data-toggle="modal" data-target=".bd-example-modal-lg">
+							<button type="button" class="btn btn-timeline" data-toggle="modal" data-target=".bd-example-modal-lg">
                             Timeline
                             </button>
 						</div>
