Updates to footer - button customised, website images increase size on hover, adjustments to map display

--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
 	<footer>
 		<div class="container-fluid footer-container">
 	
-			<div class="row justify-content-center sdfooterrow">
+			<div class="row justify-content-center footerrow">
 	
 				<div class="col-4 footer-col-map">
-					<button class="btn btn-light btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
+					<button class="btn btn-map btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
 	                    Project Map
 	                </button>
 				</div>
@@ -309,9 +309,9 @@
 							<img src="assets/images/logo-quintain-25px.png" alt="Quintain Corporate Website Link">
 	                </a>
 				</div>
-				<div class="col-8">
+				<div class="col-10">
 					<div class="collapse" id="collapseMap">
-						<div class="card card-body">
+						<div class="card card-body map-box">
 							<div id="map"></div>
 						</div>
 					</div>
