Correct Navbar ordering by introducting z-index to CSS

--- a/project1.html
+++ b/project1.html
@@ -147,7 +147,8 @@
                                 src="assets/images/P2_thumb.png"
                                 alt="Project 2 Image"
                                 height="150"
-                                class="menuitem-project1"/>
+                                class="menuitem-project1"
+                                href="project2.html"/>
                             </li>
 
 						<li class="col-md-3 list-inline-item menuitem">
@@ -206,7 +207,7 @@
                     </p>
 
 						<div class="center-timeline">
-							<button type="button" class="btn btn-secondary" data-toggle="modal" data-target=".bd-example-modal-lg">
+							<button type="button" class="btn btn-timeline" data-toggle="modal" data-target=".bd-example-modal-lg">
                             Timeline
                             </button>
 						</div>
@@ -287,7 +288,7 @@
 			<div class="row justify-content-center footerrow">
 	
 				<div class="col-4 footer-col-map">
-					<button class="btn btn-light btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
+					<button class="btn btn-map btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
 	                    Project Map
 	                </button>
 				</div>
@@ -300,9 +301,9 @@
 							<img src="assets/images/logo-quintain-25px.png" alt="Quintain Corporate Website Link">
 	                </a>
 				</div>
-				<div class="col-8">
+				<div class="col-10">
 					<div class="collapse" id="collapseMap">
-						<div class="card card-body">
+						<div class="card card-body map-box">
 							<div id="map"></div>
 						</div>
 					</div>
