Update Navbar small screen dropdown button to custom

--- a/project1.html
+++ b/project1.html
@@ -169,7 +169,7 @@
 				<div class="col-12 no-gutters">
 					<div class="dropdown">
 						<button
-                            class="btn btn-default dropdown-toggle btn-block"
+                            class="btn btn-nav dropdown-toggle btn-block"
                             type="button"
                             id="dropdownMenuButton"
                             data-toggle="dropdown"
