--- a/project1.html
+++ b/project1.html
@@ -207,18 +207,18 @@
                     </p>
 
 						<div class="center-timeline">
-							<button type="button" class="btn btn-timeline" data-toggle="modal" data-target=".bd-example-modal-lg">
+							<button type="button" class="btn btn-timeline" data-toggle="modal" data-target=".bd-timeline-modal-lg">
                             Timeline
                             </button>
 						</div>
 
 						<!-- Modal -->
-						<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
-							aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal fade bd-timeline-modal-lg" tabindex="-1" role="dialog"
+							aria-labelledby="timelineModalLabel" aria-hidden="true">
 							<div class="modal-dialog modal-lg">
 								<div class="modal-content">
 									<div class="modal-header">
-										<h5 class="modal-title" id="exampleModalLabel">Project Timeline</h5>
+										<h5 class="modal-title" id="timelineModalLabel">Project Timeline</h5>
 										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -244,13 +244,13 @@
 
 			<div class="container container-carousel">
 
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<div id="carouselGalleryIndicators" class="carousel slide" data-ride="carousel">
 					<ol class="carousel-indicators">
-						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+						<li data-target="#carouselGalleryIndicators" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselGalleryIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselGalleryIndicators" data-slide-to="2"></li>
+						<li data-target="#carouselGalleryIndicators" data-slide-to="3"></li>
+						<li data-target="#carouselGalleryIndicators" data-slide-to="4"></li>
 					</ol>
 					<div class="carousel-inner">
 						<div class="carousel-item active">
@@ -269,11 +269,11 @@
 							<img src="assets/images/P1-Int-1-min.jpg" class="d-block w-100" alt="Image 5" />
                         </div>
 					</div>
-					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<a class="carousel-control-prev" href="#carouselGalleryIndicators" role="button" data-slide="prev">
 					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					    <span class="sr-only">Previous</span>
 					</a>
-					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<a class="carousel-control-next" href="#carouselGalleryIndicators" role="button" data-slide="next">
 						<span class="carousel-control-next-icon" aria-hidden="true"></span>
 						<span class="sr-only">Next</span>
 					</a>
