Add Titles to Footers imgs

--- a/project1.html
+++ b/project1.html
@@ -295,10 +295,10 @@
 				<div class="col-4 footer-col-web">
 					<p>Websites:</p>
 					<a href="https://wembleypark.com/" target="_blank">
-						<img src="assets/images/logo-wp-25px.png" alt="Wembley Park Corporate Website Link">
+						<img src="assets/images/logo-wp-25px.png" alt="Wembley Park Corporate Website Link" title="Wembley Park Website">
 	                </a>
 						<a href="https://www.quintain.co.uk/" target="_blank">
-							<img src="assets/images/logo-quintain-25px.png" alt="Quintain Corporate Website Link">
+							<img src="assets/images/logo-quintain-25px.png" alt="Quintain Corporate Website Link" title="Quintain Website">
 	                </a>
 				</div>
 				<div class="col-10">
