Formatting of HTML and CSS before replicating

--- a/project1.html
+++ b/project1.html
@@ -20,10 +20,9 @@
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
 
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+
+    <!-- Google Chart - Pie Chart - Start -->
 
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script type="text/javascript">
@@ -70,6 +69,10 @@
       }
 	</script>
 
+    <!-- Google Chart - Pie Chart - End -->
+
+    <!-- Google Chart - Timeline - Start -->
+
 	<script type="text/javascript">
 		google.charts.load("current", {packages:["timeline"]});
         google.charts.setOnLoadCallback(drawChart);
@@ -107,11 +110,16 @@
         }
 	</script>
 
+    <!-- Google Chart - Timeline - Start -->
+
 	<title>Benchmarking</title>
 
 </head>
 
 <body>
+
+<!-- Logo Banner - Start -->
+
 	<header>
 		<div class="container-fluid container-logo no-gutters">
 			<div class="row justify-content-center banner-logo">
@@ -123,6 +131,10 @@
                 </div>
 			</div>
 		</div>
+
+<!-- Logo Banner - End -->
+
+<!-- Navbar - Large Screen - Start -->
 
 		<div class="container-fluid d-none d-sm-none d-md-block no-gutters">
 			<nav class="row navbar no-gutters">
@@ -164,6 +176,10 @@
 			</nav>
 		</div>
 
+<!-- Navbar - Large Screen - End -->
+
+<!-- Navbar - Large Screen - Start -->
+
 		<div class="container-fluid d-md-none">
 			<div class="row">
 				<div class="col-12 no-gutters">
@@ -188,11 +204,20 @@
 				</div>
 			</div>
 		</div>
+
+<!-- Navbar - Small Screen - End -->
+
 	</header>
 
 	<section>
+
+<!-- Main Section - Start -->
+
 		<div class="container no-gutters">
 			<div class="row no-gutters">
+
+                <!-- Overview Section - Start -->
+            
 				<div class="col-12 col-md-6 overview">
 					<h1>Project 1</h1>
 					<p>
@@ -206,13 +231,16 @@
                         Vestibulum gravida, dui vitae dapibus facilisis, felis arcu ultrices lectus, vitae varius magna justo ut quam. Cras in odio efficitur, dapibus ligula ut, bibendum ex. Mauris lobortis ornare lorem, non commodo velit rutrum vitae. Fusce vitae ullamcorper sapien. In luctus velit commodo, malesuada urna eu, scelerisque.
                     </p>
 
+                        <!-- Timeline Button -->
+
 						<div class="center-timeline">
 							<button type="button" class="btn btn-timeline" data-toggle="modal" data-target=".bd-timeline-modal-lg">
                             Timeline
                             </button>
 						</div>
 
-						<!-- Modal -->
+						<!-- Timeline Modal -->
+
 						<div class="modal fade bd-timeline-modal-lg" tabindex="-1" role="dialog"
 							aria-labelledby="timelineModalLabel" aria-hidden="true">
 							<div class="modal-dialog modal-lg">
@@ -231,12 +259,23 @@
 						</div>
 				</div>
 
+                <!-- Overview Section - End -->
+
+                <!-- Chart Section - Start -->
+
 				<div class="col-12 col-md-6 justify-content-center chartbox">
 					<h1>Cost Breakdown (£/sqft)</h1>
 					<div id="piechart" style="width: 90%; height: 90%;" class="chart"></div>
 				</div>
+
+                <!-- Chart Section - End -->
+
 			</div>
 		</div>
+
+<!-- Main Section - End -->
+
+<!-- Gallery Section - Start -->
 
 		<div class="gallery">
 
@@ -280,18 +319,29 @@
 				</div>
 			</div>
 		</div>
+
+<!-- Gallery Section - End -->
+
 	</section>
 
 	<footer>
+
 		<div class="container-fluid footer-container">
 	
 			<div class="row justify-content-center footerrow">
 	
+<!-- Footer - Map Button - Start -->
+
 				<div class="col-4 footer-col-map">
 					<button class="btn btn-map btn-sm" type="button" data-toggle="collapse" data-target="#collapseMap" aria-expanded="false" aria-controls="collapseMap">
 	                    Project Map
 	                </button>
 				</div>
+
+<!-- Footer - Map Button - End -->
+
+<!-- Footer - Weblinks - Start -->
+
 				<div class="col-4 footer-col-web">
 					<p>Websites:</p>
 					<a href="https://wembleypark.com/" target="_blank">
@@ -301,18 +351,27 @@
 							<img src="assets/images/logo-quintain-25px.png" alt="Quintain Corporate Website Link" title="Quintain Website">
 	                </a>
 				</div>
+
+<!-- Footer - Weblinks - End -->
+
+<!-- Footer - Map Dropdown - Start -->
+
 				<div class="col-10">
 					<div class="collapse" id="collapseMap">
 						<div class="card card-body map-box">
 							<div id="map"></div>
 						</div>
 					</div>
-	
 				</div>
+
+<!-- Footer - Map Dropdown - End -->
+
 			</div>
 		</div>
 	</footer>
 </body>
+
+<!-- Map Script and Formatting - Start -->
 
 <script>
 
@@ -545,5 +604,6 @@
 	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVpHLcJ-9sjMpQu5v_RI_BRk1OGEU2RpA&callback=initMap">
 </script>
 
+<!-- Map Script and Formatting - End -->
 
 </html>
