Replicate and customise Project 2 and 3

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <!-- Google Chart - Timeline - End -->
 
-	<title>Benchmarking</title>
+	<title>WP - Overview</title>
 
 </head>
 
@@ -150,7 +150,7 @@
 			<nav class="row navbar no-gutters">
 				<div class="col no gutters">
 					<ul id="nav" class="list-inline menucontainer">
-						<li class="col-md-3 list-inline-item menuitem active">
+						<li class="col-md-3 list-inline-item menuitem menuitem-noimage active">
 							<a href="index.html">Overview</a>
 						</li>
 
@@ -187,7 +187,7 @@
 
 <!-- Navbar - Large Screen - End -->
 
-<!-- Navbar - Large Screen - Start -->
+<!-- Navbar - Small Screen - Start -->
 
 		<div class="container-fluid d-md-none">
 			<div class="row">
@@ -201,7 +201,7 @@
                             aria-haspopup="true"
                             aria-expanded="false"
                         >
-                        Introduction
+                        Menu
                         </button>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 							<a class="dropdown-item" href="index.html">Overview</a>
@@ -382,8 +382,7 @@
 
 <!-- Map Script and Formatting - Start -->
 
-<script>
-
+    <script>
     var labels = '123456789';
     var labelIndex = 0;
 
