--- a/project1.html
+++ b/project1.html
@@ -112,7 +112,7 @@
 
     <!-- Google Chart - Timeline - Start -->
 
-	<title>Benchmarking</title>
+	<title>WP - Project 1</title>
 
 </head>
 
@@ -140,12 +140,12 @@
 			<nav class="row navbar no-gutters">
 				<div class="col no gutters">
 					<ul id="nav" class="list-inline menucontainer">
-						<li class="col-md-3 list-inline-item menuitem">
-							<a href="index.html">Project Overview</a>
+						<li class="col-md-3 list-inline-item menuitem menuitem-noimage">
+							<a href="index.html">Overview</a>
 						</li>
 
 						<li class="col-md-3 list-inline-item menuitem active">
-							<a href="project1.html"> Project 1</a>
+							<a href="project1.html">Project 1</a>
 							<img
                             src="assets/images/P1_thumb.png"
                             alt="Project 1 Image"
@@ -159,8 +159,7 @@
                                 src="assets/images/P2_thumb.png"
                                 alt="Project 2 Image"
                                 height="150"
-                                class="menuitem-project1"
-                                href="project2.html"/>
+                                class="menuitem-project1"/>
                             </li>
 
 						<li class="col-md-3 list-inline-item menuitem">
@@ -178,7 +177,7 @@
 
 <!-- Navbar - Large Screen - End -->
 
-<!-- Navbar - Large Screen - Start -->
+<!-- Navbar - Small Screen - Start -->
 
 		<div class="container-fluid d-md-none">
 			<div class="row">
@@ -190,9 +189,8 @@
                             id="dropdownMenuButton"
                             data-toggle="dropdown"
                             aria-haspopup="true"
-                            aria-expanded="false"
-                        >
-                        Project 1
+                            aria-expanded="false">
+                                Menu
                         </button>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 							<a class="dropdown-item" href="index.html">Overview</a>
@@ -219,7 +217,7 @@
                 <!-- Overview Section - Start -->
             
 				<div class="col-12 col-md-6 overview">
-					<h1>Project 1</h1>
+					<h1>Project Overview</h1>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur	id mattis ante, vitae mattis risus. Vivamus eget nisl eget nisi	gravida facilisis scelerisque a augue. Duis sit amet lorem diam.
 						Aliquam vulputate lacinia est.
