Minor revisions following testing

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 	<header>
 		<div class="container-fluid container-logo no-gutters">
-			<div class="row justify-content-center banner-logo">
+			<div class="row justify-content-center banner-logo no-gutters">
 				<div class="col-12 col-md-6 logo-quintain justify-content-center">
                     <img src="assets/images/logo-quintain.png" alt="Quintain Logo">
                 </div>
