--- a/project2.html
+++ b/project2.html
@@ -99,6 +99,7 @@
                 barLabelStyle: {fontName: 'Montserrat', fontSize: '12'},
             },
             hAxis: {
+                minValue: new Date(2013, 3),
                 format: "QQ YYY",
                 },
             colors: ['#BFB1A4', '#726355', '#94979F', '#555A67','#212633', '#647374', '#344445'],
@@ -110,7 +111,7 @@
         }
 	</script>
 
-    <!-- Google Chart - Timeline - Start -->
+    <!-- Google Chart - Timeline - End -->
 
 	<title>WP - Project 2</title>
 
@@ -122,7 +123,7 @@
 
 	<header>
 		<div class="container-fluid container-logo no-gutters">
-			<div class="row justify-content-center banner-logo">
+			<div class="row justify-content-center banner-logo no-gutters">
 				<div class="col-12 col-md-6 logo-quintain justify-content-center">
                     <img src="assets/images/logo-quintain.png" alt="Quintain Logo">
                 </div>
