Navbar images amended to hyperlinks following Peer feedback, and other minor updates incl README

--- a/index.html
+++ b/index.html
@@ -155,30 +155,33 @@
 						</li>
 
 						<li class="col-md-3 list-inline-item menuitem">
-							<a href="project1.html"> Project 1</a>
+							<a href="project1.html"> Project 1
 							<img
                             src="assets/images/P1_thumb.png"
                             alt="Project 1 Image"
                             height="150"
                             class="menuitem-project1"/>
+                        </a>
                         </li>
 
 						<li class="col-md-3 list-inline-item menuitem">
-							<a href="project2.html">Project 2</a>
+							<a href="project2.html">Project 2
 							<img
                                 src="assets/images/P2_thumb.png"
                                 alt="Project 2 Image"
                                 height="150"
                                 class="menuitem-project1"/>
+                            </a>
                             </li>
 
 						<li class="col-md-3 list-inline-item menuitem">
-							<a href="project3.html">Project 3</a>
+							<a href="project3.html">Project 3
 							<img
                                 src="assets/images/P3_thumb.png"
                                 alt="Project 3 Image"
                                 height="150"
                                 class="menuitem-project1"/>
+                            </a>
                             </li>
 					</ul>
 				</div>
