Replace gallery on Overview page with Dashboard

--- a/project1.html
+++ b/project1.html
@@ -458,11 +458,11 @@
 				<div class="col-12 col-md-6 overview">
 					<h1>Project Overview</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur	id mattis ante, vitae mattis risus. Vivamus eget nisl eget nisi	gravida facilisis scelerisque a augue. Duis sit amet lorem diam.
-						Aliquam vulputate lacinia est.
-						<br />
-						<br />
-                        Vestibulum gravida, dui vitae dapibus facilisis, felis arcu ultrices lectus, vitae varius magna justo ut quam. Cras in odio efficitur, dapibus ligula ut, bibendum ex. Mauris lobortis ornare lorem, non commodo velit rutrum vitae. Fusce vitae ullamcorper sapien. In luctus velit commodo, malesuada urna eu, scelerisque.
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam feugiat eros a vestibulum ornare. Vivamus vehicula, nibh ac sagittis euismod, dolor tellus eleifend nisi, vitae tincidunt sapien dolor vitae urna. Curabitur pellentesque vulputate velit id laoreet. Sed lacinia sodales sapien vel interdum. Maecenas efficitur commodo orci quis pharetra.
+                        <br>
+                        <br>
+                        Nunc porta facilisis nibh ac efficitur. In eu orci id nibh imperdiet bibendum. Duis tristique velit eu elit ultrices vestibulum in ac magna. Fusce ornare faucibus mattis. Aenean vel massa ligula. Pellentesque euismod, dui in tristique imperdiet, ipsum arcu posuere nulla, nec dictum ante sem vitae arcu. Mauris elementum orci ligula.
 						<br />
 						<br />
                         Vestibulum gravida, dui vitae dapibus facilisis, felis arcu ultrices lectus, vitae varius magna justo ut quam. Cras in odio efficitur, dapibus ligula ut, bibendum ex. Mauris lobortis ornare lorem, non commodo velit rutrum vitae. Fusce vitae ullamcorper sapien. In luctus velit commodo, malesuada urna eu, scelerisque.
@@ -512,7 +512,7 @@
 
 <!-- Main Section - End -->
 
-<!-- Gallery Section - Start -->
+<!-- Dashboard Section - Start -->
 
 		<div class="gallery">
 
