--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
           ["1", 325, 323],
           ["2", 310, 323],
           ["3", 285, 323],
-          ["4", 300, 323],
         ]);
 
         var options = {
@@ -121,7 +120,7 @@
 	</script>
 
     <!-- Google Chart - Timeline - End -->
-    
+
     <!-- Map Script and Formatting - Start -->
 
         <script>
@@ -521,52 +520,83 @@
 
 <!-- Main Section - End -->
 
-<!-- Gallery Section - Start -->
+<!-- Dashboard Section - Start -->
 
-		<div class="gallery">
+		<div class="container dashboard no-gutters">
+			<div class="row no-gutters justify-content-center">
 
-			<h1>Gallery</h1>
+				<div class="col-12 justify-content-center dashboard-header">
+					<h1>Dashboard</h1>
+				</div>
 
-			<div class="container container-carousel">
-
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="assets/images/Overview-1.jpg" class="d-block w-100" alt="Image 1" />
-                        </div>
-						<div class="carousel-item">
-							<img src="assets/images/Overview-2.jpg" class="d-block w-100" alt="Image 2" />
-                        </div>
-						<div class="carousel-item">
-							<img src="assets/images/Overview-3.jpg" class="d-block w-100" alt="Image 3" />
-                        </div>
-						<div class="carousel-item">
-						    <img src="assets/images/Overview-4.jpg" class="d-block w-100" alt="Image 4" />
-                        </div>
-						<div class="carousel-item">
-							<img src="assets/images/Overview-5.jpg" class="d-block w-100" alt="Image 5" />
-                        </div>
+				<div class="col-6 col-md-3 dashboard-boxes">
+					<div class="dashboard-boxes-background-top">
+						<h4>Programme</h4>
 					</div>
-					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					    <span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
+					<div class="dashboard-boxes-background-bottom">
+						<h5>-2 weeks</h5>
+					</div>
+				</div>
+				<div class="col-6 col-md-3 dashboard-boxes">
+					<div class="dashboard-boxes-background-top">
+						<h4>Cost v. Budget</h4>
+					</div>
+					<div class="dashboard-boxes-background-bottom">
+						<h5>+£500k</h5>
+					</div>
+				</div>
+				<div class="col-6 col-md-3 dashboard-boxes">
+					<div class="dashboard-boxes-background-top">
+						<h4>Units Completed</h4>
+					</div>
+					<div class="dashboard-boxes-background-bottom">
+						<h5>800</h5>
+					</div>
+				</div>
+				<div class="col-6 col-md-3 dashboard-boxes">
+					<div class="dashboard-boxes-background-top">
+						<h4>Units let to date</h4>
+					</div>
+					<div class="dashboard-boxes-background-bottom">
+						<h5>650 units</h5>
+					</div>
+				</div>
+				<div class="col-6 col-md-3 dashboard-boxes">
+					<div class="dashboard-boxes-background-top">
+						<h4>New Planning Applications</h4>
+					</div>
+					<div class="dashboard-boxes-background-bottom">
+						<h5>3 new sites</h5>
+					</div>
+				</div>
+				<div class="col-6 col-md-3 dashboard-boxes">
+					<div class="dashboard-boxes-background-top">
+						<h4>Planned Units</h4>
+					</div>
+					<div class="dashboard-boxes-background-bottom">
+						<h5>1,500</h5>
+					</div>
+				</div>
+				<div class="col-6 col-md-3 dashboard-boxes">
+					<div class="dashboard-boxes-background-top">
+						<h4>Resident Satisfaction</h4>
+					</div>
+					<div class="dashboard-boxes-background-bottom">
+						<h5>95%</h5>
+					</div>
+				</div>
+				<div class="col-6 col-md-3 dashboard-boxes">
+					<div class="dashboard-boxes-background-top">
+						<h4>ROI</h4>
+					</div>
+					<div class="dashboard-boxes-background-bottom">
+						<h5>7%</h5>
+					</div>
 				</div>
 			</div>
+		
 		</div>
-
-<!-- Gallery Section - End -->
+<!-- Dashboard Section - End -->
 
 	</section>
 
